set up environment

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SESSION_SECRET=4
 DATABASE='mongodb+srv://bryanaim:kingkobra@cluster0-73kit.mongodb.net/myproject?retryWrites=true&w=majority'
-GITHUB_CLIENT_ID=bacfa7b5e37ee066f1c1
-GITHUB_CLIENT_SECRET=e6a1a888b1745e675e9ef888f0b4f17dc8fad195
+GITHUB_CLIENT_ID='662feb0039f99f8b5ead'
+GITHUB_CLIENT_SECRET='39bc8244098dafb61226fe1d725a7a326c193776'
